Update program descriptions and links in the home page

--- a/pages/home.html
+++ b/pages/home.html
@@ -81,7 +81,7 @@
                 <ul class="tabs-nav">
                     <li class="tabs-nav-item active" data-target="KHDL"> KHOA HỌC DỮ LIỆU<br><br>
                             Bậc cử nhân・4 năm <br><br>
-                            Học máy thông kê, Trực quan dữ liệu, Khai phá dữ liệu, Học sâu.
+                            Học máy thông kê, Công nghệ Dữ liệu lớn, Khai phá dữ liệu, Học sâu.
                     </li>
                     <li class="tabs-nav-item" data-target="CNTT">
                         CÔNG NGHỆ THÔNG TIN <br><br>
@@ -91,7 +91,7 @@
                     <li class="tabs-nav-item" data-target="CNNB">
                         CÔNG NGHỆ THÔNG TIN VIỆT - NHẬT <br><br>
                          Bậc cử nhân・4 năm <br><br>
-                        Học máy thông kê, Trực quan dữ liệu, Kiểm chứng phần mềm, Văn hóa doanh nnghiệp,
+                        Học máy thông kê, Trí tuệ nhân tạo, Kiểm chứng phần mềm, Văn hóa doanh nghiệp.
                     </li>
                     <div class="bg-active"></div>
                 </ul>
@@ -107,7 +107,7 @@
                             <li>Khai phá dữ liệu</li>
                             <li>Học sâu</li>
                         </ul>
-                        <a href="../pages/dao-tao.html">Tìm hiểu thêm &#8594</a>
+                        <a href="ISE_Web/dao-tao?tab=bachelor&program=khdl-bachelor">Tìm hiểu thêm &#8594</a>
                     </div>
                     <div class="tabs-content-items" id="CNTT">
                         <img src="../assets/home-tab-img-2.png">
@@ -133,7 +133,7 @@
                             <li>Kiểm chứng phần mềm</li>
                             <li>Văn hóa doanh nghiệp</li>
                         </ul>
-                        <a href="../pages/dao-tao.html">Tìm hiểu thêm &#8594</a>
+                        <a href="ISE_Web/dao-tao?tab=bachelor&program=cnnb-bachelor">Tìm hiểu thêm &#8594</a>
                     </div>
                 </div>
             </div>
