Fix navigation links to use absolute paths for consistency

--- a/pages/home.html
+++ b/pages/home.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="../styles/home.css">
 </head>
 <body>
-<body>
     <div id="header-container"></div>
     <div class="slider">
         <div class="slider-content">
@@ -107,7 +106,7 @@
                             <li>Khai phá dữ liệu</li>
                             <li>Học sâu</li>
                         </ul>
-                        <a href="ISE_Web/dao-tao?tab=bachelor&program=khdl-bachelor">Tìm hiểu thêm &#8594</a>
+                        <a href="/ISE_Web/dao-tao?tab=bachelor&program=khdl-bachelor">Tìm hiểu thêm &#8594</a>
                     </div>
                     <div class="tabs-content-items" id="CNTT">
                         <img src="../assets/home-tab-img-2.png">
@@ -120,7 +119,7 @@
                             <li>Phát triển Website</li>
                             <li>Công nghệ dữ liệu lớn</li>
                         </ul>
-                        <a href="../pages/dao-tao.html">Tìm hiểu thêm &#8594</a>
+                        <a href="/ISE_Web/dao-tao">Tìm hiểu thêm &#8594</a>
                     </div>
                     <div class="tabs-content-items" id="CNNB">
                         <img src="../assets/home-tab-img-3.png">
@@ -133,7 +132,7 @@
                             <li>Kiểm chứng phần mềm</li>
                             <li>Văn hóa doanh nghiệp</li>
                         </ul>
-                        <a href="ISE_Web/dao-tao?tab=bachelor&program=cnnb-bachelor">Tìm hiểu thêm &#8594</a>
+                        <a href="/ISE_Web/dao-tao?tab=bachelor&program=cnnb-bachelor">Tìm hiểu thêm &#8594</a>
                     </div>
                 </div>
             </div>
