Fix organizational chart link to use relative path for consistency

--- a/pages/gioi-thieu/gioi-thieu-chung.html
+++ b/pages/gioi-thieu/gioi-thieu-chung.html
@@ -109,7 +109,7 @@
                     <div class="org-chart-box">
                         <p class="org-chart-box__title">Lãnh đạo khoa</p>
                         <p class="org-chart-box__text">
-                            <a href="/ISE_Web/doi-ngu-nhan-su/doi-ngu-nhan-su_kietnv"
+                            <a href="../doi-ngu-nhan-su/doi-ngu-nhan-su_kietnv.html"
                                class="org-chart-link">
                                 TS. Nguyễn Văn Kiệt - Phó Trưởng khoa, Phụ trách Khoa
                             </a>
